get configs by project instead of getting all
