# docs/swagger.json
@@ -5,29 +5,6 @@
     },
     "paths": {
         "/configs": {
-            "get": {
-                "produces": [
-                    "application/json"
-                ],
-                "operationId": "GetConfigsAll",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/storage.Config"
-                            }
-                        }
-                    },
-                    "default": {
-                        "description": "",
-                        "schema": {
-                            "$ref": "#/definitions/restapi.ResponseError"
-                        }
-                    }
-                }
-            },
             "post": {
                 "consumes": [
                     "application/json"
@@ -111,6 +88,40 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/storage.CreatedItem"
+                        }
+                    },
+                    "default": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/restapi.ResponseError"
+                        }
+                    }
+                }
+            }
+        },
+        "/projects/{id}/configs": {
+            "get": {
+                "produces": [
+                    "application/json"
+                ],
+                "operationId": "GetConfigsByProject",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "User ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/storage.Config"
+                            }
                         }
                     },
                     "default": {
